gcc/testsuite/rust/rustc/ui/parser/raw/raw-literal-underscore.rs
fn main() {
    let r#_: ();
// { dg-error "" "" { target *-*-* } .-1 }
}

